--- a/index.html
+++ b/index.html
@@ -17,26 +17,29 @@
 </head>
 <body>
 <div class="container">
-  <img width="360px" height="175px" src="images/image-equilibrium.jpg" alt="">
+  <img id="pic" width="370px" height="350px" src="images/image-equilibrium.jpg" alt="">
   <h2>Equilibrium #3429</h2>
   <p>Our Equilibrium collection promotes balance and calm.</p>
- <div class="left">
-  <img src="images/icon-ethereum.svg" alt="">
-  <h2 id="ETH">0.041 ETH</h2>
+ <div class="div">
+  <div class="left">
+  <h2 id="ETH"><img src="images/icon-ethereum.svg" alt="">0.041 ETH</h2>
  </div>
+ <div class="div">
 <div class="right">
-  <img src="images/icon-clock.svg" alt=""/>
-  <h2 id="time">3 days left</h2>
+  <h2 id="time"><img src="images/icon-clock.svg" alt=""/>3 days left</h2>
+</div>
+</div>
 </div>
 <hr>
+<div class="divd">
 <div class="avatar">
-  <img src="images/image-avatar.png" alt="">
-  <h3><span>Creation of </span> Jules Wyvern</h3>
+  <h3><img src="images/image-avatar.png" alt=""><span>Creation of </span> Jules Wyvern</h3>
 </div> 
 </div>
+</div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">OladeleJnr</a>.
   </div>
 </body>
 </html>
